src/objects/Indent_Request_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Quantity__c</fullName>
        <label>Approved Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch_Status__c</fullName>
        <label>Dispatch Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indent_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Indent Request</label>
        <referenceTo>Indent_Request__c</referenceTo>
        <relationshipLabel>Indent Request Details</relationshipLabel>
        <relationshipName>Indent_Request_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Item_Priority__c</fullName>
        <label>Item Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Line_Status__c</fullName>
        <label>Line Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pending_Quantity__c</fullName>
        <formula>Approved_Quantity__c -  Total_Dispatch_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>Products__r.Product_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>Products__r.Category_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Products</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Indent Request Details</relationshipLabel>
        <relationshipName>Indent_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Requested_Quantity__c</fullName>
        <label>Requested Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Dispatch_Quantity__c</fullName>
        <label>Total Dispatch Quantity</label>
        <summarizedField>Indent_Request_Dispatch_Detail__c.Dispatch_Quantity__c</summarizedField>
        <summaryForeignKey>Indent_Request_Dispatch_Detail__c.Indent_Request_Detail__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Indent Request Detail</label>
    <nameField>
        <label>Sl No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indent Request Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Validate_Approved_Quantity</fullName>
        <active>true</active>
        <description>Approved Quantity cannot be more than Requested Quantity</description>
        <errorConditionFormula>Approved_Quantity__c = 0 ||  Approved_Quantity__c &gt;  Requested_Quantity__c</errorConditionFormula>
        <errorDisplayField>Approved_Quantity__c</errorDisplayField>
        <errorMessage>Approved Quantity cannot be 0 or more than Requested Quantity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Dispatch_Quantity</fullName>
        <active>false</active>
        <errorConditionFormula>Total_Dispatch_Quantity__c &gt;  Approved_Quantity__c</errorConditionFormula>
        <errorMessage>Total Dispatch Quantity cannot be greater than Approved Quantity</errorMessage>
    </validationRules>
</CustomObject>